--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,7 +22,8 @@ jobs:
       run: dotnet build --configuration Release --no-restore
 
     - name: Test
-      run: dotnet test --logger "trx;LogFileName=test-results.trx" || true- name: Test Report
+      run: dotnet test --logger "trx;LogFileName=test-results.trx" || true
+    - name: Test Report
       uses: dorny/test-reporter@v1
       if: always()
       with:
